--- a/template1/index.html
+++ b/template1/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
 	<header>
-		<a href="#" class="logo"><span>ICONICASTILL<!--
-		 --></span>.template1</a>
+		<a href="#" class="logo"><span>ICONICASTILL</span>.template1</a>
 
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
@@ -25,11 +24,11 @@
 			<a href="#precios">precios</a>
 			<a href="#contactos">contactos</a>
 		</nav>
-
 	</header>
+
 	<section class="inicio" id="inicio">
 		<div class="content">
-			<h3>bienvenido<span><br>a vuestra web</span></h3>
+			<h3>bienvenido<span> a vuestra web</span></h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, laborum debitis? Voluptates, beatae dolore eum qui odit accusantium delectus nam quisquam, facere voluptate rerum minima, quidem reiciendis commodi omnis nobis!</p>
 			<a href="#" class="btn">Mas INFORMACION</a>
 		</div>
@@ -37,6 +36,7 @@
 			<img src="/img/audifono.png" alt="">
 		</div>
 	</section>
+
 	<section class="detalles" id="detalles">
 		<h1 class="heading">Como funciona</h1>
 		<div class="caja-contenedor">
@@ -44,43 +44,34 @@
 				<img src="/img/icono1.png" alt="">
 				<h3>PIDE DINERO</h3>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
-
-
 				<a href="#" class="btn">VER MAS</a>
 			</div>
 			<div class="caja">
 				<img src="/img/icono2.png" alt="">
 				<h3>PIDE UNA COSA</h3>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
-
-
 				<a href="#" class="btn">VER MAS</a>
 			</div>
 			<div class="caja">
 				<img src="/img/icono3.png" alt="">
 				<h3>PIDE UN DESEO</h3>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
-
-
 				<a href="#" class="btn">VER MAS</a>
 			</div>
 		</div>
-
 	</section>
+
 	<section class="acerca_de" id="acerca_de">
 		<h1 class="heading">¿quienes somos?</h1>
 		<div class="columna">
 			<div class="image">
-				<center><img src="/img/auriculares_2.png" alt=""></center>
+				<img src="/img/auriculares_2.png" alt="">
 			</div>
 			<div class="content">
 				<h3>organizacion sin fines de lucro <span>100% </span></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto consectetur officiis modi cum beatae! Eaque, quisquam. Sunt repellat natus laudantium corporis rem explicabo, dignissimos itaque nobis atque tempore ratione hic?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit libero consequuntur deleniti temporibus amet tempore illo odio sequi optio dolorem modi ducimus, aut saepe. Distinctio quas doloribus suscipit rem dolorem.</p>
-
 				<h3><span>descarga nuestra app</span></h3>
-
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, laborum dolor recusandae totam doloribus consequatur odio, at veritatis et dolorem quas necessitatibus aspernatur ratione saepe praesentium ut pariatur illum doloremque!</p>
-
 				<div class="bottons">
 					<a href="#" class="btn"><i class="fa-brands fa-google-play"></i> GOOGLE PLAY</a>
 					<a href="#" class="btn"><i class="fa-brands fa-apple"></i>APPLE STORE</a>
@@ -90,76 +81,69 @@
 	</section>
 	
 	<div class="suscribete">
-
 		<h3>SUSCRIBETE PARA TENER MAS NOVEDADES</h3>
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
 		<form action="">
 			<input type="email" placeholder="ingresa tu email">
 			<input type="submit" value="suscribete">
 		</form>
-
 	</div>
 
 	<section class="opiniones" id="opiniones">
-
 		<h1 class="heading">opiniones de clientes</h1>
 		<div class="caja-contenedor">
 			<div class="caja">
-				<!-- <i class="fa-solid fa-atom"></i> -->
 				<div class="user">
 					<img src="/img/user_1.png" alt="">
 					<h3>pedro</h3>
-				<div class="stars">
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-				</div>
-				<div class="comentarios">
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
-				</div>
+					<div class="stars">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+					</div>
+					<div class="comentarios">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
+					</div>
 				</div>
 			</div>
 			<div class="caja">
-				<!-- <i class="fa-solid fa-atom"></i> -->
 				<div class="user">
 					<img src="/img/user_2.png" alt="">
 					<h3>maria</h3>
-				<div class="stars">
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-				</div>
-				<div class="comentarios">
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
-				</div>
+					<div class="stars">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+					</div>
+					<div class="comentarios">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
+					</div>
 				</div>
 			</div>
 			<div class="caja">
-				<!-- <i class="fa-solid fa-atom"></i> -->
 				<div class="user">
 					<img src="/img/user_3.png" alt="">
 					<h3>david</h3>
-				<div class="stars">
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-solid fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-					<i class="fa-regular fa-star"></i>
-				</div>
-				<div class="comentarios">
-					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
-				</div>
+					<div class="stars">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+						<i class="fa-regular fa-star"></i>
+					</div>
+					<div class="comentarios">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="precios" id="precios">
-		
 		<h1 class="heading">planes de precios</h1>
 		<div class="caja-contenedor">
 			<div class="caja"><br>
@@ -179,7 +163,7 @@
 				<ul>
 					<li><i class="fa-solid fa-check"></i> manos libre</li>
 					<li><i class="fa-solid fa-check"></i> resistentes al agua</li>
-					<li><i class="fa-solid fa-check"></i>  extra bass</li>
+					<li><i class="fa-solid fa-check"></i>  extra bass</li>
 					<li><i class="fa-solid fa-xmark"></i> cancelacion de ruido</li>
 				</ul>
 				<a href="#" class="btn">compra ya</a>
@@ -199,42 +183,38 @@
 	</section>
 
 	<section class="contactos" id="contactos">
-
 		<div class="image">
-			<center><img src="/img/form_img.png" alt=""></center>
+			<img src="/img/form_img.png" alt="">
 		</div>
 		<form id="form" action="">
 			<h1 class="heading">ESCRIBENOS</h1>
 			<div class="inputcaja">
 				<input name="name" type="text" required>
 				<label for="name">nombre</label>
-
 			</div>
 			<div class="inputcaja">
 				<input name="email" type="email" required>
 				<label for="email">email</label>
 			</div>
-
 			<div class="inputcaja">
 				<input name="number" type="number" required>
 				<label for="number">telefono</label>
 			</div>
-
 			<div class="inputcaja">
-				<textarea name="message" required name="" id="" cols="30" rows="10"></textarea>
+				<textarea name="message" required id="" cols="30" rows="10"></textarea>
 				<label for="message">mensaje</label>
 			</div>
 			<input type="submit" class="btn" value="ENVIAR">
 		</form>
 		<a href="mailto:ncastillo224@gmail.com" id="trucazo">email</a>
 	</section>
+
 	<div class="footer">
 		<div class="caja-contenedor">
 			<div class="caja">
 				<h3>noticias e informacion</h3>
 				<p class="texto">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
 			</div>
-
 			<div class="caja">
 				<h3>RRSS</h3>
 				<a href="#">facebook</a>
@@ -242,22 +222,18 @@
 				<a href="#">pinteres</a>
 				<a href="#">twitter</a>
 			</div>
-
 			<div class="caja">
 				<h3>mas informacion</h3>
-
 				<div class="info">
 					<i class="fa-solid fa-phone"></i>
 					<p style="text-align: right;">
 						+58 123-456-7891 <br>
 						+1 789-444-5211</p>
 				</div>
-
 				<div class="info">
 					<i class="fa-solid fa-envelope"></i>
 					<p>increible@fuckyou.com <br>facilona@fuckyou.com</p>
 				</div>
-
 				<div class="info">
 					<i class="fa-sharp fa-solid fa-location-dot"></i>
 					<p>Caracas, Venezuela<br>10805</p>
@@ -266,9 +242,10 @@
 		</div>
 
 		<h1 class="creditos">
-			&copy, copyright @ 2022 iconicastill 
+			&copy, copyright @ 2022 iconicastill 
 		</h1>
 	</div>
+
 	<script src="script.js"></script>
 	<noscript>
 		<h3>La página que estás viendo requiere el uso de JavaScript.<br>
