--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 		</div>
 		
 <form id="contact-form">
+	<h1 class="heading">ESCRIBENOS</h1>
   <div class="inputcaja">
     <input type="text" name="nombre" required>
     <label>nombre</label>
@@ -277,6 +278,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
