--- a/template1/index.html
+++ b/template1/index.html
@@ -187,7 +187,7 @@
 			<img src="/img/form_img.png" alt="">
 		</div>
 		<form id="form" action="">
-			<h1 class="heading">ESCRIBENOS</h1>
+			<h1 class="heading">ENVIAR MENSAJE</h1>
 			<div class="inputcaja">
 				<input name="name" type="text" required>
 				<label for="name">nombre</label>
@@ -253,3 +253,4 @@
 	</noscript>
 </body>
 </html>
+
