--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		</div>
 		
 <form id="contact-form">
-	<h1 class="heading">ESCRIBENOS</h1>
+	<h1 class="heading">ENVIAR MENSAJE</h1>
   <div class="inputcaja">
     <input type="text" name="nombre" required>
     <label>nombre</label>
@@ -207,3 +207,4 @@
 	</noscript>
 </body>
 </html>
+
