--- a/index.html
+++ b/index.html
@@ -148,32 +148,36 @@
 	<section class="contactos" id="contactos">
 		
 	<h1 class="heading">FORMULARIO DE CONTACTO</h1>
+
+	<div class="contact-content">
 		
 		<div class="image">
-			<center><img src="/img/form_img.png" alt=""></center>
+			<center><img src="/img/form_img.png" alt="Icono de un sobre"></center>
 		</div>
 		
-<form id="contact-form">
-	<h1 class="heading">ENVIAR MENSAJE</h1>
-  <div class="inputcaja">
-    <input type="text" name="nombre" required>
-    <label>nombre</label>
-  </div>
-  <div class="inputcaja">
-    <input type="email" name="email" required>
-    <label>email</label>
-  </div>
-  <div class="inputcaja">
-    <input type="text" name="telefono" required>
-    <label>telefono</label>
-  </div>
-  <div class="inputcaja">
-    <textarea name="mensaje" required></textarea>
-    <label>mensaje</label>
-  </div>
-  <input type="submit" class="btn" value="ENVIAR">
-</form>
-
+		<form id="contact-form">
+			<h1 class="heading">ENVIAR MENSAJE</h1>
+		  <div class="inputcaja">
+		    <input type="text" name="nombre" required>
+		    <label>nombre</label>
+		  </div>
+		  <div class="inputcaja">
+		    <input type="email" name="email" required>
+		    <label>email</label>
+		  </div>
+		  <div class="inputcaja">
+		    <input type="text" name="telefono" required>
+		    <label>telefono</label>
+		  </div>
+		  <div class="inputcaja">
+		    <textarea name="mensaje" required></textarea>
+		    <label>mensaje</label>
+		  </div>
+		  <input type="submit" class="btn" value="ENVIAR">
+		</form>
+		
+	</div>
+		
 	</section>
 	<div class="footer">
 		<div class="caja-contenedor">
@@ -219,3 +223,4 @@
 	</noscript>
 </body>
 </html>
+
