--- a/servicios.html
+++ b/servicios.html
@@ -35,7 +35,7 @@
 				width: 100%;
 				border-collapse: collapse;
 				margin: 20px auto;
-				font-size: 1.5rem;
+				font-size: 2rem;
 			}
 	
 			th, td {
@@ -51,6 +51,15 @@
 			tr:nth-child(even) {
 				background-color: #f2f2f2;
 			}
+
+			@media(max-width:450px){
+				
+			table {
+				font-size: 1.5rem;
+			}
+				
+			}
+
 		</style>
 </head>
 <body>
@@ -167,4 +176,5 @@
 	</noscript>
 </body>
 </html>
+
 
