--- a/index.html
+++ b/index.html
@@ -216,13 +216,17 @@
 			&copy, copyright 2022 @iconicastill 
 		</h1>
 	</div>
+	
 	<script src="script.js"></script>
+	<script src="urls.js"></script>
+	
 	<noscript>
 		<h3>La página que estás viendo requiere el uso de JavaScript.<br>
 		Si lo has deshabilitado intencionadamente, por favor vuelve a activarlo.</h3>
 	</noscript>
 </body>
 </html>
+
 
 
 
