Revise index.html content and structure
Updated the content and structure of the HTML file, including changes to meta tags, headings, and body text.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	<section class="inicio" id="inicio">
 		<div class="content">
 			<div class="inicio-text">
-				<h3>community manager<span><br>Desarrollador y Diseñador Web</span></h3>
-				<p>Community manager enfocado en ayudar a las empresas a destacar en línea. En desarrollo y diseño web, creo sitios web personalizados y atractivos que combinan funcionalidad y diseño de vanguardia.</p>
+				<h3>Bienvenido<span><br>Yo soy Desarrollador y Diseñador Web</span></h3>
+				<p>Creo sitios Y APPS web personalizadas y atractivas que combinan funcionalidad y diseño de excepcional.</p>
 			</div>
 		</div>
 		<!-- <div class="image">
@@ -75,9 +75,6 @@
 				<h3>HERRAMIENTAS/SOFWARES DE DISEÑO</h3>
 				<ul>
 					<li>ADOBE PHOTOSHOP</li>
-					<!--<li>ADOBE ILUSTRATOR</li>
-					<li>ADOBE ANIMATE</li>
-					<li>ADOBE AFTER EFECT</li>-->
 					<li>CANVAS</li>
 					<li>GIMP</li>
 				</ul>
@@ -116,7 +113,6 @@
 				
 				<center><div class="bottons">
 					<a href="https://wa.me/+18098468085" class="btn"><i class="fa-brands fa-whatsapp"></i>WHATSAPP</a>
-					<!-- <a href="#" class="btn"><i class="fa-brands fa-apple"></i>APPLE STORE</a> -->
 				</div></center>
 			</div>
 		</div>
@@ -226,6 +222,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
