--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<section class="inicio" id="inicio">
 		<div class="content">
 			<div class="inicio-text">
-				<h3><span>Yo soy Desarrollador y Diseñador Web</span></h3>
+				<h3>Yo soy <span>Nicolas</span> Desarrollador y Diseñador Web</h3>
 				<p>Creo sitios Y APPS web personalizadas y atractivas que combinan funcionalidad y diseño de excepcional.</p>
 			</div>
 		</div>
@@ -222,6 +222,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
