--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
 		  <div class="inputcaja">
 		    <textarea name="mensaje" required></textarea>
 		    <label>mensaje</label>
+			    <div class="contador">
+      				Caracteres escritos: <span id="usados">0</span>
+    			</div>
 		  </div>
 		  <input type="submit" class="btn" value="ENVIAR">
 		</form>
@@ -222,6 +225,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
