Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		    <label>telefono</label>
 		  </div>
 		  <div class="inputcaja">
-		    <textarea name="mensaje" required></textarea>
+		    <textarea name="mensaje" id="mensaje" required></textarea>
 		    <label>mensaje</label>
 			    <div class="contador">
       				Caracteres escritos: <span id="usados">0</span>
@@ -225,6 +225,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
