Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		  <div class="inputcaja">
 		    <textarea name="mensaje" id="mensaje" required></textarea>
 		    <label>mensaje</label>
-			    <div class="contador">
+			    <div class="contador inputcaja">
       				Caracteres escritos: <span id="usados">0</span>
     			</div>
 		  </div>
@@ -225,6 +225,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
