Fix formatting of links in portafolio.html

--- a/portafolio.html
+++ b/portafolio.html
@@ -47,7 +47,8 @@
 					<li><a href="template4">Página de Portafolio</a></li>
 					<li><a href="template5">Página 'Próximamente'</a></li>
 					<li><a href="template6">Página de Evento o Invitación</a></li>
-					<li><a href="template7">Presentación Personal </a></li>
+					<li><a href="template7">Presentación Personal</a></li>
+					<li><a href="template8">Contador de Caracteres</a></li>
 					<li><a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App (PHP)</a></li>
 					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App (DJANGO) - Creación de tareas</a></li>
 					<li><a href="https://app.iconicastill.com/mensajes/" target="_blank">Acceder a App (DJANGO) - Recepción de mensajes</a></li>
