--- a/template4/index.html
+++ b/template4/index.html
@@ -17,6 +17,7 @@
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
+			<a href="../portafolio.html">regresar</a>
 			<a href="#inicio">inicio</a>
 			<a href="#detalles">detalles</a>
 			<a href="#acerca_de">acerca de</a>
@@ -276,3 +277,4 @@
 	</noscript>
 </body>
 </html>
+
