Add link to return to portfolio page

--- a/template8/index.html
+++ b/template8/index.html
@@ -34,6 +34,8 @@
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
 
+			<a href="../portafolio.html">regresar</a>
+
 			<a href="#inicio">Acerca de mi</a>
 
 			<a href="#acerca_de">Certificaciones</a>
