Change 'regresar' to 'Regresar' in navbar

--- a/template8/index.html
+++ b/template8/index.html
@@ -34,7 +34,7 @@
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
 
-			<a href="../portafolio.html">regresar</a>
+			<a href="../portafolio.html">Regresar</a>
 
 			<a href="#inicio">Acerca de mi</a>
 
