--- a/template8/index.html
+++ b/template8/index.html
@@ -12,7 +12,7 @@
   	<meta name="description" content="Community Manager, Desarrollador y Diseñador Web profesional. Ofrezco servicios de gestión de redes sociales, desarrollo de sitios web personalizados y diseño web creativo para impulsar la presencia en línea de tu negocio. ¡Mejora tu marca digital hoy mismo!">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>NICOLAS CASTILLO CAMACHO</title>
+	<title>CONTADOR DE CARACTERES</title>
 	<link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<link rel="stylesheet" href="estilos.css">
@@ -25,24 +25,20 @@
 </head>
 <body>
 	<header>
-		<a href="#" class="logo"><span>NICOLAS<!--
-		 --></span> D. CASTILLO CAMACHO</a>
+		<a href="#" class="logo"><span>BY<!--
+		 --></span> ICONICASTILL</a>
 
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
 
-			<a href="/portafolio">regresar</a>
+			<a href="/portafolio">Desarrollador</a>
 
-			<a href="#inicio">Acerca de mi</a>
+			<a href="#inicio">Inicio</a>
 
-			<a href="#acerca_de">Certificaciones</a>
+			<a href="#acerca_de">Contador</a>
 
 			<a href="#contactos">Contactos</a>
-
-			<a href="servicios.html">Servicios</a>
-
-			<a href="portafolio.html">Portafolio</a>
 
 		</nav>
 
@@ -64,10 +60,6 @@
 	<h1 class="heading">FORMULARIO DE CONTACTO</h1>
 
 	<div class="contact-content">
-		
-		<div class="image">
-			<center><img src="/img/form_img.png" alt="Icono de un sobre"></center>
-		</div>
 		
 		<form id="contact-form">
 			<h1 class="heading">ENVIAR MENSAJE</h1>
@@ -124,7 +116,7 @@
 
 				<div class="info">
 					<i class="fa-sharp fa-solid fa-location-dot"></i>
-					<p>Santo Domingo, RD<br>10702</p>
+					<p>Santo Domingo, RD<br>10605</p>
 				</div>
 			</div>
 		</div>
