--- a/template8/index.html
+++ b/template8/index.html
@@ -32,7 +32,7 @@
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
 
-			<a href="/portafolio">Desarrollador</a>
+			<a href="../index.html">Desarrollador</a>
 
 			<a href="#inicio">Inicio</a>
 
