Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="content">
 			<div class="inicio-text">
 				<h3><span>Yo</span> soy <span>Nicolas</span> Desarrollador y Diseñador Web</h3>
-				<p>Creo sitios Y APPS web personalizadas y atractivas que combinan funcionalidad y diseño de excepcional.</p>
+				<p>Creo sitios Y Aplicaciónes web, personalizados y atractivos que combinan funcionalidad y diseño excepcional.</p>
 			</div>
 		</div>
 		<!-- <div class="image">
