Revise meta description and form heading text
Updated the description meta tag and modified the form heading.

--- a/template8/index.html
+++ b/template8/index.html
@@ -9,7 +9,7 @@
   gtag('config', 'G-WLVHKPQ6N2');
 </script>
 	<meta charset="UTF-8">
-  	<meta name="description" content="Community Manager, Desarrollador y Diseñador Web profesional. Ofrezco servicios de gestión de redes sociales, desarrollo de sitios web personalizados y diseño web creativo para impulsar la presencia en línea de tu negocio. ¡Mejora tu marca digital hoy mismo!">
+  	<meta name="description" content="Desarrollador y Diseñador Web profesional.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CONTADOR DE CARACTERES</title>
@@ -51,19 +51,8 @@
 	<div class="contact-content">
 		
 		<form id="contact-form">
-			<h1 class="heading">ENVIAR MENSAJE</h1>
-		  <div class="inputcaja">
-		    <input type="text" name="nombre" required="">
-		    <label>nombre</label>
-		  </div>
-		  <div class="inputcaja">
-		    <input type="email" name="email" required="">
-		    <label>email</label>
-		  </div>
-		  <div class="inputcaja">
-		    <input type="text" name="telefono" required="">
-		    <label>telefono</label>
-		  </div>
+			<h1 class="heading">Escribe, o pega el texto:</h1>
+
 		  <div class="inputcaja">
 		    <textarea name="mensaje" id="mensaje" required=""></textarea>
 		    <label>mensaje</label>
@@ -71,7 +60,6 @@
       				Caracteres escritos: <span id="usados">0</span>
     			</div>
 		  </div>
-		  <input type="submit" class="btn" value="ENVIAR">
 		</form>
 		
 	</div>
