--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-WLVHKPQ6N2');
 </script>
 	<meta charset="UTF-8">
-  	<meta name="description" content="Community Manager, Desarrollador y Diseñador Web profesional. Ofrezco servicios de gestión de redes sociales, desarrollo de sitios web personalizados y diseño web creativo para impulsar la presencia en línea de tu negocio. ¡Mejora tu marca digital hoy mismo!">
+  	<meta name="description" content="Desarrollador y Diseñador Web profesional.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NICOLAS CASTILLO CAMACHO</title>
@@ -225,6 +225,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
