Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	<div class="contact-content">
 		
 		<div class="image">
-			<center><img src="/img/form_img.png" alt="Icono de un sobre"></center>
+			<center><img src="/img/form_img.png" alt="Icono de un sobre" width="75vh"></center>
 		</div>
 		
 		<form id="contact-form">
@@ -225,6 +225,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
