Actualizar index.html

--- a/template8/index.html
+++ b/template8/index.html
@@ -34,6 +34,8 @@
 
 			<a href="../index.html">Desarrollador</a>
 
+  <a href="../portafolio.html">Portafolio</a>
+
 			<a href="#acerca_de">Contador</a>
 
 		</nav>
