Update servicios.html with service details

--- a/servicios.html
+++ b/servicios.html
@@ -17,8 +17,7 @@
 	<title>NICOLAS CASTILLO CAMACHO</title>
 	<link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-	<link rel="stylesheet" href="estilos.css">
-	<link rel="stylesheet" href="style-list.css">
+	<link rel="stylesheet" href="style.css">
 	<style>
 		i{
 			margin-inline: 1rem;
@@ -176,6 +175,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
