--- a/template9/index.html
+++ b/template9/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Turismo en Ciudad Ficticia</title>
+  <link rel="stylesheet" href="css/style.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     header { background-color: #008080; color: white; padding: 20px; text-align: center; }
@@ -101,6 +102,6 @@
 
   cambiarIdioma(idiomaActual);
 </script>
-
+<script src="js/scripts.js"></script>
 </body>
 </html>
