Add navbar with additional links and language buttons

--- a/template9/index.html
+++ b/template9/index.html
@@ -12,12 +12,20 @@
   <button id="switchLang">Cambiar a Inglés</button>
 </header>
 
-<nav>
+<nav class="navbar">
+  
+  <!-- Enlaces adicionales -->
+  <a href="../index.html" class="nav-link">Desarrollador</a>
+  <a href="../portafolio.html" class="nav-link">Portafolio</a>
+  
+  <!-- Botones con switch de idioma -->
   <button data-texto="navInicio"></button>
   <button data-texto="navAtracciones"></button>
   <button data-texto="navHoteles"></button>
   <button data-texto="navContacto"></button>
+  
 </nav>
+
 
 <section id="inicio">
   <h2 data-texto="inicioTitulo"></h2>
