--- a/template9/index.html
+++ b/template9/index.html
@@ -17,6 +17,7 @@
   <!-- Enlaces adicionales -->
   <a href="../index.html" class="nav-link">Desarrollador</a>
   <a href="../portafolio.html" class="nav-link">Portafolio</a>
+  <a href="version2.html" class="nav-link">Version 2</a>
   
   <!-- Botones con switch de idioma -->
   <button data-texto="navInicio"></button>
