--- a/template9/version2.html
+++ b/template9/version2.html
@@ -49,6 +49,7 @@
 
   <aside>
     <h3>Enlaces útiles</h3>
+    <a href="index.html">Primera Version</a><br>
     <a href="../index.html">Desarrollador</a><br>
     <a href="../portafolio.html">Portafolio</a><br>
     <h3>Información extra</h3>
