--- a/template9/index.html
+++ b/template9/index.html
@@ -11,6 +11,7 @@
 <header>
   <h1 data-texto="titulo"></h1>
   <button id="switchLang">Cambiar a Inglés</button>
+  <button id="modoOscuro">🌙 Modo Oscuro</button>
 </header>
 
 <nav>
