--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
       </div>
 
-      <figure class="image">
+      <!-- <figure class="image">
         <img src="/img/android-chrome-512x512.png" alt="Logo personal de Nicolás Castillo">
-      </figure>
-    </section>
+      </figure> -->
+    </section> 
 
     <!-- === Sección de conocimientos / certificaciones === -->
     <section id="acerca_de" class="acerca_de">
@@ -210,4 +210,5 @@
     </h3>
   </noscript>
 </body>
+
 </html>
