--- a/portafolio.html
+++ b/portafolio.html
@@ -14,7 +14,7 @@
   	<meta name="description" content="Desarrollador y Diseñador Web profesional.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>NICOLAS CASTILLO CAMACHO</title>
+	<title>Nicolás Castillo Camacho</title>
 	<link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<link rel="stylesheet" href="style.css">
