Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="es">
 <!-- Documento HTML5 en español -->
 <head>
-  <!-- ======= METADATOS ======= -->
+  <!-- METADATOS -->
   <meta charset="UTF-8">
   <meta name="description" content="Desarrollador y Diseñador Web profesional.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nicolás Castillo Camacho</title>
 
-  <!-- ======= ICONOS Y ESTILOS ======= -->
+  <!-- ICONOS Y ESTILOS -->
   <link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
-  <!-- ======= GOOGLE ANALYTICS ======= -->
+  <!-- GOOGLE ANALYTICS -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <!-- ======= ENCABEZADO PRINCIPAL ======= -->
+  <!-- ENCABEZADO PRINCIPAL -->
   <header>
     <a href="#" class="logo">
       <span>NICOLAS</span> D. CASTILLO CAMACHO
@@ -44,7 +44,7 @@
     </nav>
   </header>
 
-  <!-- ======= CONTENIDO PRINCIPAL ======= -->
+  <!-- CONTENIDO PRINCIPAL -->
   <main>
     <!-- === Sección de presentación === -->
     <section id="inicio" class="inicio">
@@ -60,7 +60,7 @@
       </figure> -->
     </section> 
 
-    <!-- === Sección de conocimientos / certificaciones === -->
+    <!-- Sección de conocimientos / certificaciones -->
     <section id="acerca_de" class="acerca_de">
       <h2 class="heading">CONOCIMIENTOS</h2>
       <div class="columna">
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <!-- === Sección de contacto === -->
+    <!-- Sección de contacto -->
     <section id="contactos" class="contactos">
       <h2 class="heading">Formulario de contacto</h2>
 
@@ -162,7 +162,7 @@
     </section>
   </main>
 
-  <!-- ======= PIE DE PÁGINA ======= -->
+  <!-- PIE DE PÁGINA -->
   <footer class="footer">
     <div class="caja-contenedor">
       <article class="caja">
@@ -200,7 +200,7 @@
     <p class="creditos">© Copyright 2022 @iconicastill</p>
   </footer>
 
-  <!-- ======= SCRIPTS ======= -->
+  <!-- SCRIPTS -->
   <script src="script.js"></script>
 
   <noscript>
@@ -212,3 +212,4 @@
 </body>
 
 </html>
+
