Update HTML document to Spanish and add metadata

--- a/portafolio.html
+++ b/portafolio.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+<!-- Documento HTML5 en español -->
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- METADATOS -->
+  <meta charset="UTF-8">
+  <meta name="description" content="Desarrollador y Diseñador Web profesional.">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nicolás Castillo Camacho</title>
 
-  gtag('config', 'G-WLVHKPQ6N2');
-</script>
-	<meta charset="UTF-8">
-  	<meta name="description" content="Desarrollador y Diseñador Web profesional.">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nicolás Castillo Camacho</title>
-	<link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-	<link rel="stylesheet" href="style.css">
+  <!-- ICONOS Y ESTILOS -->
+  <link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
+
+  <!-- GOOGLE ANALYTICS -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-WLVHKPQ6N2');
+  </script>
 </head>
 <body>
 	<header>
