Fix copyright formatting in footer

--- a/portafolio.html
+++ b/portafolio.html
@@ -71,7 +71,7 @@
 		</section>
 	<div class="footer">
 		<h1 class="creditos">
-			&copy, copyright 2022 @iconicastill 
+			&copy Copyright 2022 @iconicastill 
 		</h1>
 	</div>
 	<script src="script.js"></script>
