--- a/servicios.html
+++ b/servicios.html
@@ -172,7 +172,7 @@
 </section>
 	<div class="footer">
 		<h1 class="creditos">
-			&copy, copyright 2022 @iconicastill 
+			&copy Copyright 2022 @iconicastill 
 		</h1>
 	</div>
 	<script src="script.js"></script>
@@ -182,6 +182,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
