--- a/template10/index.html
+++ b/template10/index.html
@@ -1,47 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Galería de Códigos QR</title>
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-<style>
-    body {
-        font-family: sans-serif;
-        background: #f5f5f5;
-        padding: 30px;
-        text-align: center;
-    }
-    h1 {
-        margin-bottom: 10px;
-    }
-    input {
-        width: 300px;
-        padding: 10px;
-        font-size: 18px;
-        margin-bottom: 25px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-    }
-    .grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 25px;
-        max-width: 1000px;
-        margin: auto;
-    }
-    .card {
-        background: white;
-        border-radius: 12px;
-        padding: 15px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .card h3 {
-        margin-bottom: 10px;
-    }
-    canvas {
-        margin-top: 10px;
-    }
-</style>
+    
+          <!-- METADATOS -->
+        <meta charset="UTF-8">
+        <meta name="description" content="Desarrollador y Diseñador Web profesional.">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nicolás Castillo Camacho</title>
+        <!-- <title>Galería de Códigos QR</title> -->
+
+        <!-- ICONOS Y ESTILOS -->
+        <link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+        <link rel="stylesheet" href="style.css">
+
+        <!-- GOOGLE ANALYTICS -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){ dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', 'G-WLVHKPQ6N2');
+        </script>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+        <style>
+            body {
+                font-family: sans-serif;
+                background: #f5f5f5;
+                padding: 30px;
+                text-align: center;
+            }
+            h1 {
+                margin-bottom: 10px;
+            }
+            input {
+                width: 300px;
+                padding: 10px;
+                font-size: 18px;
+                margin-bottom: 25px;
+                border-radius: 8px;
+                border: 1px solid #ccc;
+            }
+            .grid {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 25px;
+                max-width: 1000px;
+                margin: auto;
+            }
+            .card {
+                background: white;
+                border-radius: 12px;
+                padding: 15px;
+                box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            }
+            .card h3 {
+                margin-bottom: 10px;
+            }
+            canvas {
+                margin-top: 10px;
+            }
+        </style>
 </head>
 <body>
 
