--- a/template10/index.html
+++ b/template10/index.html
@@ -23,8 +23,6 @@
             gtag('js', new Date());
             gtag('config', 'G-WLVHKPQ6N2');
         </script>
-
-
         <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
         <style>
             body {
@@ -66,6 +64,25 @@
         </style>
 </head>
 <body>
+
+      <!-- ENCABEZADO PRINCIPAL -->
+  <header>
+    <a href="#" class="logo">
+      <span>NICOLAS</span> D. CASTILLO CAMACHO
+    </a>
+
+    <!-- Menú responsive -->
+    <input type="checkbox" id="menu-bar">
+    <label for="menu-bar" class="fa fa-bars"></label>
+
+    <nav class="navbar" aria-label="Menú principal">
+      <a href="#inicio">Acerca de mí</a>
+      <a href="#acerca_de">Certificaciones</a>
+      <a href="#contactos">Contactos</a>
+      <a href="servicios.html">Servicios</a>
+      <a href="portafolio.html">Portafolio</a>
+    </nav>
+  </header>
 
 <h1>Galería de Códigos QR</h1>
 <p>Escribe texto y se generará un QR en cada estilo/lenguaje:</p>
