--- a/template10/index.html
+++ b/template10/index.html
@@ -13,7 +13,7 @@
 <!-- ICONOS Y ESTILOS -->
 <link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 
 <!-- GOOGLE ANALYTICS -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
