--- a/template10/index.html
+++ b/template10/index.html
@@ -84,6 +84,7 @@
 </nav>
 </header>
 
+<section>
 <h1>Galería de Códigos QR</h1>
 <p>Escribe texto y se generará un QR en cada estilo/lenguaje:</p>
 
@@ -137,6 +138,8 @@
     </div>
 
 </div>
+
+</section>
 
 <script>
 function generarQR(elementId, text) {
