--- a/template10/index.html
+++ b/template10/index.html
@@ -138,6 +138,44 @@
 
 </section>
 
+<!-- PIE DE PÁGINA -->
+<footer class="footer">
+<div class="caja-contenedor">
+    <article class="caja">
+    <h3>Noticias e información</h3>
+    <p class="texto">¡Contáctame para crear una solución web profesional y efectiva que impulse tu éxito!</p>
+    </article>
+
+    <article class="caja">
+    <h3>Redes Sociales</h3>
+    <a href="https://www.linkedin.com/in/nicolas-castillo-camacho/" target="_blank" rel="noopener noreferrer">
+        LinkedIn
+    </a>
+    </article>
+
+    <article class="caja">
+    <h3>Más información</h3>
+
+    <div class="info">
+        <i class="fa-solid fa-phone"></i>
+        <p>+1 809-846-8085</p>
+    </div>
+
+    <div class="info">
+        <i class="fa-solid fa-envelope"></i>
+        <p>nicolascastillocamacho@gmail.com</p>
+    </div>
+
+    <div class="info">
+        <i class="fa-solid fa-location-dot"></i>
+        <p>Santo Domingo, RD<br>10702</p>
+    </div>
+    </article>
+</div>
+
+<p class="creditos">© Copyright 2022 @iconicastill</p>
+</footer>
+
 <script>
 function generarQR(elementId, text) {
     const canvas = document.getElementById(elementId);
@@ -157,6 +195,13 @@ function actualizarQRs() {
 // Generar QR inicial vacío
 actualizarQRs();
 </script>
+
+<noscript>
+<h3>
+    La página que estás viendo requiere el uso de JavaScript.<br>
+    Si lo has deshabilitado intencionadamente, por favor vuelve a activarlo.
+</h3>
+</noscript>
 
 </body>
 </html>
