--- a/template10/index.html
+++ b/template10/index.html
@@ -80,7 +80,7 @@
 </nav>
 </header>
 
-<section>
+<main>
 
 <h1>Galería de Códigos QR</h1>
 <p>Escribe texto y se generará un QR en cada estilo/lenguaje:</p>
@@ -136,7 +136,7 @@
 
 </div>
 
-</section>
+</main>
 
 <!-- PIE DE PÁGINA -->
 <footer class="footer">
