--- a/template10/index.html
+++ b/template10/index.html
@@ -28,11 +28,17 @@
     body {
         font-family: sans-serif;
         background: #f5f5f5;
-        padding: 30px;
+        /* padding: 30px; */
         text-align: center;
     }
     h1 {
         margin-bottom: 10px;
+    }
+    main{
+	min-height:  100vh;
+	padding: 0 9%;
+	padding-top: 6rem;
+	padding-bottom: 2rem;
     }
     input {
         width: 300px;
