--- a/template10/index.html
+++ b/template10/index.html
@@ -36,9 +36,7 @@
     }
     main{
 	min-height:  100vh;
-	padding: 0 9%;
-	padding-top: 6rem;
-	padding-bottom: 2rem;
+	padding: 12rem;
     }
     input {
         width: 300px;
