--- a/template5/index.html
+++ b/template5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -256,7 +256,7 @@
 
 				<div class="info">
 					<i class="fa-solid fa-envelope"></i>
-					<p>increible@fuckyou.com <br>facilona@fuckyou.com</p>
+					<p>contacto@example.com <br>facilona@fuckyou.com</p>
 				</div>
 
 				<div class="info">
