--- a/template9/index.html
+++ b/template9/index.html
@@ -1,11 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Turismo en Ciudad Ficticia</title>
-  <link rel="stylesheet" href="css/style.css">
+    
+<!-- METADATOS -->
+<meta charset="UTF-8">
+<meta name="description" content="Desarrollador y Diseñador Web profesional.">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Turismo en Ciudad Ficticia</title>
+
+<!-- ICONOS Y ESTILOS -->
+<link rel="shortcut icon" href="/img/favicon_io/favicon.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+<link rel="stylesheet" href="css/style.css">
+
+<!-- GOOGLE ANALYTICS -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-WLVHKPQ6N2');
+</script>
 </head>
+
 <body>
 
 <header>
