--- a/template1/index.html
+++ b/template1/index.html
@@ -273,7 +273,7 @@
 				</div>
 				<div class="info">
 					<i class="fa-solid fa-envelope"></i>
-					<p>contacto@example.com <br>facilona@fuckyou.com</p>
+					<p>contacto@example.com <br>complain@example.com</p>
 				</div>
 				<div class="info">
 					<i class="fa-sharp fa-solid fa-location-dot"></i>
