--- a/template6/index.html
+++ b/template6/index.html
@@ -270,7 +270,7 @@
 
 				<div class="info">
 					<i class="fa-solid fa-envelope"></i>
-					<p>contacto@example.com <br>facilona@fuckyou.com</p>
+					<p>contacto@example.com <br>complain@example.com</p>
 				</div>
 
 				<div class="info">
