--- a/template9/index.html
+++ b/template9/index.html
@@ -29,7 +29,7 @@
 <header>
   <h1 data-texto="titulo"></h1>
   <button id="switchLang">Cambiar a Inglés</button>
-  <button id="modoOscuro">🌙 Modo Oscuro</button>
+  <button id="modoOscuro" data-texto="modoOscuro">🌙 Modo Oscuro</button>
 </header>
 
 <nav>
